--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 main = ".open-next/worker.js"
-name = "xiaoyuzhou_downloader"
+name = "xiaoyuzhou-downloader"
 compatibility_date = "2025-03-25"
 compatibility_flags = ["nodejs_compat"]
 [assets]
