Update configuration: upgrade eslint-config-next, adjust tsconfig.json, and enable observability in wrangler.toml

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,3 +5,8 @@ compatibility_flags = ["nodejs_compat"]
 [assets]
 directory = ".open-next/assets"
 binding = "ASSETS"
+[observability]
+[observability.logs]
+enabled = true
+head_sampling_rate = 0.5
+invocation_logs = true
